# game-003-dungeon-dot

./: .gitignore  CLAUDE.md  README.md  Taskfile.yml  mise.toml  pyproject.toml  tox.ini
.claude/: settings.json
.claude/commands/issue/: create-refactor.md  create.md
.claude/commands/pr/: create-from-issue.md  create-from-local.md  resolve-review-comments.md
.claude/hooks/: ruff-pre-commit.sh
.claude/skills/_shared/: commit-rules.md  conflict-resolution.md  graphql-review.md  pr-body-template.md  pre-commit-checks.md  spec-sync.md
.claude/skills/issue-create/: SKILL.md
.claude/skills/issue-create-refactor/: SKILL.md
.claude/skills/pr-create-from-issue/: SKILL.md
.claude/skills/pr-create-from-local/: SKILL.md
.claude/skills/pr-resolve-review-comments/: SKILL.md
.github/: copilot-instructions.md  git-commit-instructions.md
.github/workflows/: ci.yml  release.yml
conf/: config.yaml
conf/game/: debug.yaml  default.yaml
conf/rendering/: default.yaml
conf/tracking/: default.yaml  offline.yaml
docs/: CONTRIBUTING.md
docs/spec/: constants.md  enemies.md  gdd.md  glossary.md  mapgen.md  readme.md  rules.md  vision.md
src/dungeon_dot/: __init__.py  __main__.py  app.py  constants.py
src/dungeon_dot/config/: __init__.py  schema.py
src/dungeon_dot/domain/: __init__.py  combat.py  dungeon.py  enemy.py  floor.py  item.py  player.py  rng.py  tile.py
src/dungeon_dot/infrastructure/: __init__.py  storage.py  tracker.py
src/dungeon_dot/presentation/: __init__.py  hud_renderer.py  input_handler.py  map_renderer.py  renderer.py  sprite.py
tests/: conftest.py
tests/config/: test_schema.py
tests/domain/: test_combat.py  test_dungeon.py  test_floor.py  test_player.py  test_rng.py
tests/infrastructure/: test_storage.py
