[project]
name = "dungeon-dot"
version = "0.0.1"
description = "ドット絵のランダム生成ダンジョン攻略ゲーム"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyxel>=2.2.8",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "wandb>=0.19",
]

[project.scripts]
dungeon-dot = "dungeon_dot.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dungeon_dot"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-benchmark>=5.1",
    "ruff>=0.9",
    "ty>=0.0.1a7",
    "import-linter>=2.1",
    "tox>=4.23",
    "tox-uv>=1.16",
]

# ==========================================================================
# Ruff
# ==========================================================================
[tool.ruff]
target-version = "py312"
src = ["src", "tests"]
line-length = 99

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplicity
    "TCH", # flake8-type-checking
    "RUF", # Ruff-specific
    "PT",  # flake8-pytest-style
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",   # line too long (formatter handles this)
    "RUF001", # ambiguous unicode character in string (日本語)
    "RUF002", # ambiguous unicode character in docstring (日本語)
    "RUF003", # ambiguous unicode character in comment (日本語)
]

[tool.ruff.lint.isort]
known-first-party = ["dungeon_dot"]

[tool.ruff.format]
quote-style = "double"

# ==========================================================================
# ty
# ==========================================================================
[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["src"]

[tool.ty.rules]
possibly-unresolved-reference = "warn"

# ==========================================================================
# pytest
# ==========================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-ra", "--strict-markers", "--strict-config", "-v"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks benchmark tests",
]
filterwarnings = ["error"]

# ==========================================================================
# coverage
# ==========================================================================
[tool.coverage.run]
source = ["dungeon_dot"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
]

# ==========================================================================
# import-linter
# ==========================================================================
[tool.importlinter]
root_packages = ["dungeon_dot"]
include_external_packages = true
exclude_type_checking_imports = true

[[tool.importlinter.contracts]]
id = "domain-purity"
name = "Domain must not import Pyxel or infrastructure"
type = "forbidden"
source_modules = ["dungeon_dot.domain"]
forbidden_modules = [
    "pyxel",
    "wandb",
    "dungeon_dot.presentation",
    "dungeon_dot.infrastructure",
]

[[tool.importlinter.contracts]]
id = "layered-architecture"
name = "Layered architecture"
type = "layers"
containers = ["dungeon_dot"]
layers = [
    "presentation",
    "infrastructure",
    "domain",
]

[[tool.importlinter.contracts]]
id = "config-purity"
name = "Config must not import presentation"
type = "forbidden"
source_modules = ["dungeon_dot.config"]
forbidden_modules = [
    "dungeon_dot.presentation",
    "pyxel",
]
